--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "tsc"
+    "compile": "tsc",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "mocha": "^8.3.2",
     "typescript": "^4.2.3"
   },
   "dependencies": {
