--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "test": "mocha"
+    "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
     "mocha": "^8.3.2",
+    "sinon": "^9.2.4",
+    "ts-node": "^9.1.1",
+    "ts-sinon": "^2.0.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
