--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.2",
     "chai": "^4.3.4",
+    "chai-exclude": "^2.0.2",
     "mocha": "^8.3.2",
     "sinon": "^9.2.4",
     "ts-node": "^9.1.1",
@@ -21,6 +22,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.168",
+    "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   }
 }
