--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts"
+    "test": "nyc mocha -r ts-node/register test/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "chai": "^4.3.4",
     "chai-exclude": "^2.0.2",
     "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
     "sinon": "^9.2.4",
     "ts-node": "^9.1.1",
     "ts-sinon": "^2.0.1",
