--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,9 +22,9 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}.
       - name: Install dependencies
         run: npm install
-      - run: npm compile
-      - run: npm test
-      - run: echo "🍏 This job's status is ${{ job.status }}.
+      - name: Compiling project 
+        run: npm compile
+      - name: Running Tests
+        run: npm test
