--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Compiling project 
-        run: npm compile
+        run: npm run compile
       - name: Running Tests
         run: npm test
