--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,6 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - uses: actions/checkout@v2
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
